--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@
   padding: 0;
   margin: 0;
 }
+
+.scroll-container {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 6rem;
+  transform: translateY(-100%);
+  background-color: white;
+  z-index: 0;
+  transition: all 0.4s ease-in-out;
+}
+
 button {
   border: none;
 }
@@ -17,18 +29,29 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid black;
-  padding: 1.5rem 10rem 1.5rem 5rem;
+  padding: 0.8rem 10rem 0.8rem 0;
   box-sizing: border-box;
   position: fixed;
   width: 100%;
+  height: 6rem;
+  overflow: hidden;
 }
-
+.scroll-container-title {
+  color: black;
+  font-size: 3rem;
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
+}
+.wp-icon {
+  transition: all 0.5s ease-in-out;
+}
 li {
   list-style: none;
   margin: 0 1rem;
 }
+
 li a {
-  color: white;
   text-decoration: none;
   font-weight: bold;
 }
@@ -37,12 +60,14 @@ ul {
   padding: 0 0.6rem;
   color: white;
 }
-
 nav button {
   background-color: black;
   color: white;
   padding: 1rem 1.5rem;
   font-weight: bold;
+}
+.nav-links {
+  color: white;
 }
 main {
   height: 100vh;
@@ -61,13 +86,13 @@ main {
   font-size: 3rem;
   margin-bottom: 1rem;
 }
+.cover-subcontainer p {
+  color: white;
+}
 span {
   color: white;
   font-weight: bold;
   font-size: 2rem;
-  color: white;
-}
-p {
   color: white;
 }
 
@@ -89,4 +114,27 @@ p {
   font-size: 1.2rem;
   letter-spacing: 0.3rem;
   padding: 1rem 2.4rem;
+}
+.sobre {
+  margin: 4rem 2rem;
+  text-align: justify;
+}
+.sobre h2 {
+  color: black;
+  font-size: 4.3rem;
+  font-style: italic;
+  font-weight: bold;
+  text-align: center;
+
+  margin-bottom: 2rem;
+  padding-bottom: 1px !important;
+}
+.sobre-content {
+  font-size: 18px;
+}
+.sobre-subtitle {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: italic;
+  margin-bottom: 2rem;
 }
